# OS_lab2

./: CMakeLists.txt
include/: array_processor.h  thread_data.h
src/: CMakeLists.txt  array_processor.cpp  average_thread.cpp  main.cpp  min_max_thread.cpp
tests/: CMakeLists.txt  test_array_processor.cpp  test_main.cpp
